--- a/.cd-builders/runner7-gitlab-deb-rpmpublisher/Makefile
+++ b/.cd-builders/runner7-gitlab-deb-rpmpublisher/Makefile
@@ -1,4 +1,8 @@
+RUNTIMETAG := $(shell date +%Y%m%d)
+DOCKER_REPOSITORY ?= docker.io
+BASE_RUNNER_IMAGE_VERSION ?= deb7_latest
+
 build:
-	docker build -t docker.io/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher .
+	docker build --build-arg BASE_RUNNER_IMAGE_VERSION=$(BASE_RUNNER_IMAGE_VERSION) -t $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher_$(RUNTIMETAG) .
 push:
-	docker push docker.io/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
+	docker push $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher_$(RUNTIMETAG)
