--- a/.cd-builders/runner7-circle-deb/Makefile
+++ b/.cd-builders/runner7-circle-deb/Makefile
@@ -6,6 +6,10 @@ version:
 
 build:
 	docker build -t $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb7_$(RUNTIMETAG) .
+
+tag:
+	docker tag $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb7_$(RUNTIMETAG) $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb7_$(RUNTIMETAG)
+
 push:
 	docker push $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb7_$(RUNTIMETAG)
 
@@ -13,7 +17,7 @@ try:
 	docker run -it $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb7_$(RUNTIMETAG) sh
 
 tag_latest:
-	docker tag $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb7_$(RUNTIMETAG) docker.io/stackstate/stackstate-agent-runner-circle:deb7_latest
+	docker tag $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb7_$(RUNTIMETAG) $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb7_latest
 
 push_latest:
 	docker push $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb7_latest
