--- a/.cd-builders/runner7-circle-rpm7/Makefile
+++ b/.cd-builders/runner7-circle-rpm7/Makefile
@@ -11,7 +11,7 @@ push:
 	docker push $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:centos7_$(RUNTIMETAG)
 
 tag_latest:
-	docker tag $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:centos7_$(RUNTIMETAG) $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:centos7_latest_v7
+	docker tag $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:centos7_$(RUNTIMETAG) $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:centos7_latest
 
 push_latest:
 	docker push $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:centos7_latest
