produce centos7 image

--- a/.cd-builders/runner7-gitlab-rpm7/Dockerfile
+++ b/.cd-builders/runner7-gitlab-rpm7/Dockerfile
@@ -1,4 +1,5 @@
-FROM docker.io/stackstate/stackstate-agent-runner-circle:centos7_latest_v7
+ARG BASE_RUNNER_IMAGE_VERSION=centos7_latest
+FROM docker.io/stackstate/stackstate-agent-runner-circle:${BASE_RUNNER_IMAGE_VERSION}
 
 # force update root certificates, in particular might return DST Root CA X3
 RUN yum -y update ca-certificates && yum -y reinstall ca-certificates
