--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -233,6 +233,8 @@ unit_tests:
     - gofmt -l -w -s ./pkg ./cmd
     - inv -e rtloader.test
     - inv -e test --coverage --race --profile --fail-on-fmt --cpus 4 --major-version $MAJOR_VERSION --python-runtimes $PYTHON_RUNTIMES
+  tags:
+    - sts-k8s-xl-runner
   retry:
     max: 2
 
@@ -254,6 +256,8 @@ unit_tests_cluster_agent:
     # TODO: --python-runtimes "$PYTHON_RUNTIMES"
     - inv -e rtloader.test
     - inv -e test --coverage --race --profile --fail-on-fmt --cpus 4 --major-version $MAJOR_VERSION --python-runtimes $PYTHON_RUNTIMES --build-include docker,linux,kubelet,kubeapiserver,python,orchestrator,clusterchecks,zlib
+  tags:
+    - sts-k8s-xl-runner
   rules:
     - *cluster_agent
   retry:
