disable ec2 cluster name detection in our runner that is in k8s

--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -224,6 +224,9 @@ unit_tests:
       alias: docker
   needs:
     - deps_deb
+  variables:
+    # disable all usable cloud providers to avoid picking up runner's cluster name
+    DD_CLOUD_PROVIDER_METADATA: unknown
   script:
     - conda activate $CONDA_ENV
     # We run inv deps again because /go/bin is not cached and we need binaries like golint, misspell
@@ -246,6 +249,9 @@ unit_tests_cluster_agent:
       alias: docker
   needs:
     - deps_deb
+  variables:
+    # disable all usable cloud providers to avoid picking up runner's cluster name
+    DD_CLOUD_PROVIDER_METADATA: unknown
   script:
     - conda activate $CONDA_ENV
     # We run inv deps again because /go/bin is not cached and we need binaries like golint, misspell
