--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -244,10 +244,6 @@ unit_tests_cluster_agent:
   interruptible: true
   needs:
     - deps_deb
-  variables:
-    # disable all usable cloud providers to avoid picking up runner's cluster name
-    DD_CLOUD_PROVIDER_METADATA: unknown
-    DD_KUBE_RESOURCES_NAMESPACE: default
   script:
     - conda activate $CONDA_ENV
     # We run inv deps again because /go/bin is not cached and we need binaries like golint, misspell
@@ -257,9 +253,9 @@ unit_tests_cluster_agent:
     - gofmt -l -w -s ./pkg ./cmd
     # TODO: --python-runtimes "$PYTHON_RUNTIMES"
     - inv -e rtloader.test
-    - inv -e test --coverage --race --profile --fail-on-fmt --cpus 4 --major-version $MAJOR_VERSION --python-runtimes $PYTHON_RUNTIMES --build-include docker,linux,kubelet,kubeapiserver,python,orchestrator,clusterchecks,zlib,ec2
+    - inv -e test --coverage --race --profile --fail-on-fmt --cpus 4 --major-version $MAJOR_VERSION --python-runtimes $PYTHON_RUNTIMES --build-include docker,linux,kubelet,kubeapiserver,python,orchestrator,clusterchecks,zlib
   tags:
-    - sts-k8s-xl-runner
+    - sts-aws
   rules:
     - *cluster_agent
   retry:
