Remove redundant job

--- a/.gitlab-ci-cluster-agent.yml
+++ b/.gitlab-ci-cluster-agent.yml
@@ -95,7 +95,7 @@ unit_tests_cluster_agent:
     - inv -e rtloader.test
     - inv -e test --coverage --race --profile --fail-on-fmt --cpus 4 --major-version $MAJOR_VERSION --python-runtimes $PYTHON_RUNTIMES --build-include docker,linux,kubelet,kubeapiserver,python,orchestrator,clusterchecks,zlib
   tags:
-    - sts-k8s-xl-runner
+    - sts-aws
   retry:
     max: 2
     when:
