--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -221,9 +221,6 @@ unit_tests:
   interruptible: true
   needs:
     - deps_deb
-  variables:
-    # disable all usable cloud providers to avoid picking up runner's cluster name
-    DD_KUBE_RESOURCES_NAMESPACE: default
   script:
     - conda activate $CONDA_ENV
     # We run inv deps again because /go/bin is not cached and we need binaries like golint, misspell
@@ -232,33 +229,9 @@ unit_tests:
     # TODO: check why formatting rules differ from previous step
     - gofmt -l -w -s ./pkg ./cmd
     - inv -e rtloader.test
-    # excluded ec2 because our gitlab runner is running in aws eks, this is how we get unwanted cluster name
-    - inv -e test --coverage --race --profile --fail-on-fmt --cpus 4 --major-version $MAJOR_VERSION --python-runtimes $PYTHON_RUNTIMES --build-exclude ec2
-  tags:
-    - sts-k8s-xl-runner
-  retry:
-    max: 2
-
-
-unit_tests_cluster_agent:
-  stage: test
-  interruptible: true
-  needs:
-    - deps_deb
-  script:
-    - conda activate $CONDA_ENV
-    # We run inv deps again because /go/bin is not cached and we need binaries like golint, misspell
-    - inv deps
-    - inv -e agent.build --race --precompile-only --major-version $MAJOR_VERSION --python-runtimes $PYTHON_RUNTIMES
-    # TODO: check why formatting rules differ from previous step
-    - gofmt -l -w -s ./pkg ./cmd
-    # TODO: --python-runtimes "$PYTHON_RUNTIMES"
-    - inv -e rtloader.test
-    - inv -e test --coverage --race --profile --fail-on-fmt --cpus 4 --major-version $MAJOR_VERSION --python-runtimes $PYTHON_RUNTIMES --build-include docker,linux,kubelet,kubeapiserver,python,orchestrator,clusterchecks,zlib
+    - inv -e test --coverage --race --profile --fail-on-fmt --cpus 4 --major-version $MAJOR_VERSION --python-runtimes $PYTHON_RUNTIMES
   tags:
     - sts-aws
-  rules:
-    - *cluster_agent
   retry:
     max: 2
 
@@ -643,7 +616,6 @@ pre_release_cluster_agent_image:
   interruptible: true
   needs:
     - build_cluster_agent
-    - unit_tests_cluster_agent
   script:
     - cd $CI_PROJECT_DIR
     - cp -r ./bin/stackstate-cluster-agent* ./Dockerfiles/cluster-agent
