--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -1,4 +1,4 @@
-image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:latest7
+image: artifactory.tooling.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:latest7
 
 stages:
   - manual_cleanup
@@ -155,7 +155,7 @@ deps_deb:
 deps_rpm:
   stage: prepare
   interruptible: true
-  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos7_20211004_v7_0
+  image: artifactory.tooling.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos7_20211004_v7_0
   cache:
     key: "deps-rpm-$STS_VER-$CI_COMMIT_REF_SLUG"
     paths:
@@ -231,28 +231,6 @@ unit_tests:
     - inv -e test --coverage --race --profile --fail-on-fmt --cpus 4 --major-version $MAJOR_VERSION --python-runtimes $PYTHON_RUNTIMES
   tags:
     - sts-aws
-  retry:
-    max: 2
-
-unit_tests_cluster_agent:
-  stage: test
-  interruptible: true
-  needs:
-    - deps_deb
-  script:
-    - conda activate $CONDA_ENV
-    # We run inv deps again because /go/bin is not cached and we need binaries like golint, misspell
-    - inv deps
-    - inv -e agent.build --race --precompile-only --major-version $MAJOR_VERSION --python-runtimes $PYTHON_RUNTIMES
-    # TODO: check why formatting rules differ from previous step
-    - gofmt -l -w -s ./pkg ./cmd
-    # TODO: --python-runtimes "$PYTHON_RUNTIMES"
-    - inv -e rtloader.test
-    - inv -e test --coverage --race --profile --fail-on-fmt --cpus 4 --major-version $MAJOR_VERSION --python-runtimes $PYTHON_RUNTIMES --build-include docker,linux,kubelet,kubeapiserver,python,orchestrator,clusterchecks,zlib
-  tags:
-    - sts-aws
-  rules:
-    - *cluster_agent
   retry:
     max: 2
 
@@ -406,7 +384,7 @@ build_deb:
 build_rpm:
   stage: build
   interruptible: true
-  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos7_20211004_v7_0
+  image: artifactory.tooling.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos7_20211004_v7_0
   needs:
     - deps_rpm
   tags:
@@ -514,7 +492,7 @@ test_deb_renaming:
 test_rpm_renaming:
   stage: test
   interruptible: true
-  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos6_20190429
+  image: artifactory.tooling.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos6_20190429
   needs:
     - build_rpm
   before_script: []
@@ -582,7 +560,7 @@ pre_release_win:
 pre_release_rpm:
   stage: pre_release
   interruptible: true
-  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
+  image: artifactory.tooling.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
   needs:
     - build_rpm
   before_script: []
@@ -597,7 +575,7 @@ pre_release_rpm:
 
 pre_release_main_agent_image: &pre_release_image
   stage: pre_release
-  image: artifactory.stackstate.io/docker-virtual/docker:18.06.0
+  image: artifactory.tooling.stackstate.io/docker-virtual/docker:18.06.0
   needs:
     - build_deb
   variables:
@@ -605,7 +583,7 @@ pre_release_main_agent_image: &pre_release_image
     DOCKER_HOST: tcp://docker:2375
     DOCKER_TLS_CERTDIR: ""
   services:
-    - name: artifactory.stackstate.io/docker-virtual/docker:18.09-dind
+    - name: artifactory.tooling.stackstate.io/docker-virtual/docker:18.09-dind
       alias: docker
   before_script: []
   script:
@@ -637,7 +615,6 @@ pre_release_cluster_agent_image:
   interruptible: true
   needs:
     - build_cluster_agent
-    - unit_tests_cluster_agent
   script:
     - cd $CI_PROJECT_DIR
     - cp -r ./bin/stackstate-cluster-agent* ./Dockerfiles/cluster-agent
@@ -1183,7 +1160,7 @@ release_deb:
 release_rpm:
   interruptible: true
   stage: release
-  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
+  image: artifactory.tooling.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
   dependencies:
     - build_rpm
   before_script:
@@ -1235,7 +1212,7 @@ release_win:
 
 .base_release_image: &base_release_image
   stage: release
-  image: artifactory.stackstate.io/docker-virtual/docker:18.06.0
+  image: artifactory.tooling.stackstate.io/docker-virtual/docker:18.06.0
   dependencies:
     - build_deb
   variables:
@@ -1243,7 +1220,7 @@ release_win:
     DOCKER_HOST: tcp://docker:2375
     DOCKER_TLS_CERTDIR: ""
   services:
-    - name: artifactory.stackstate.io/docker-virtual/docker:18.09-dind
+    - name: artifactory.tooling.stackstate.io/docker-virtual/docker:18.09-dind
       alias: docker
   before_script: []
   tags:
