Use sts version of rpm-s3

--- a/.cd-builders/runner-circle-rpm/Dockerfile
+++ b/.cd-builders/runner-circle-rpm/Dockerfile
@@ -91,6 +91,6 @@ RUN mkdir -p "$GEM_HOME" "$BUNDLE_BIN" \
 
 RUN git config --global user.email "gitlab@stackstate" && git config --global user.name "Gitlab Stackstate"
 
-RUN pip install awscli boto3 sa-rpm-s3
+RUN pip install awscli boto3 sts-rpm-s3
 
 RUN yum -y install net-snmp-devel python-deltarpm yum-utils libtool rpm-sign createrepo
