--- a/.cd-builders/runner7-gitlab-rpm/Dockerfile
+++ b/.cd-builders/runner7-gitlab-rpm/Dockerfile
@@ -32,7 +32,7 @@ RUN curl https://curl.se/ca/cacert.pem -o /etc/pki/tls/certs/ca-bundle.crt
 
 # /workaround
 
-RUN pip install awscli boto3 sa-rpm-s3
+RUN pip install awscli boto3 sts-rpm-s3
 
 RUN yum -y install net-snmp-devel python-deltarpm yum-utils libtool rpm-sign createrepo
 
