STAC-14043 Apply changes from branch STAC-14043-Investigation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,9 @@ stages:
 #   - "<commit message> [py2][molecule-compose]"
 #   - "<commit message> [py3][molecule-secrets][molecule-vms]"
 
+# You can also reduce the costs by running no molecule tests
+#   - "<commit message> [molecule-none]"
+
 variables: &commonvariables
   # The SRC_PATH is in the GOPATH of the builders which
   # currently is /go
