--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -214,6 +214,16 @@ deps_win:
       - runner_system_failure
       - stuck_or_timeout_failure
 
+publish_rpmpublisher:
+  stage: prepare
+  before_script: []
+  when: manual
+  tags:
+    - sts-k8s-m-runner
+  script:
+    - cd $CI_PROJECT_DIR/.cd-builders/runner7-gitlab-deb-rpmpublisher && make build
+    - cd $CI_PROJECT_DIR/.cd-builders/runner7-gitlab-deb-rpmpublisher && make push
+
 ## build stage
 
 unit_tests:
