--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -55,19 +55,20 @@ stages:
   # build so that we can release the cluster agent as part of a V2 release.
   # TODO: Change this when V3 releases are finalized and the default.
   - &cluster_agent
-    if: $MAJOR_VERSION == "2"
+    if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION
   - &cluster_agent_always
-    if: $MAJOR_VERSION == "2"
+    if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION
     when: always
   - &cluster_agent_on_success
-    if: $MAJOR_VERSION == "2"
+    if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION
     when: on_success
   - &cluster_agent_on_failure
-    if: $MAJOR_VERSION == "2"
+    if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION
     when: on_failure
   - &cluster_agent_release
-    if: $MAJOR_VERSION == "2" && ($CI_COMMIT_TAG || $CI_JOB_TRIGGERED == "true")
+    if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && ($CI_COMMIT_TAG || $CI_JOB_TRIGGERED == "true")
     when: manual
+
 ######################### /pipeline bricks
 
 
@@ -659,7 +660,7 @@ pre_release_cluster_agent_image:
 .molecule_test: &molecule_test
   <<: *molecule_artifacts
   stage: acceptance
-  timeout: 50 minutes
+  timeout: 80 minutes
   script:
     - cd $CI_PROJECT_DIR/test
     - ./molecule3.sh $MOLECULE_SCENARIO test
@@ -793,7 +794,7 @@ molecule_integrations_success_cleanup:
   # Currently we default to only running on Python2 build.
   # TODO: Change this when V3 releases are finalized and the default.
   - &kubernetes_ignore_rule
-    if: $MAJOR_VERSION == "2" && $CI_COMMIT_MESSAGE =~ /\[molecule\-/ && $CI_COMMIT_MESSAGE !~ /\[molecule\-kubernetes]/
+    if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_COMMIT_MESSAGE =~ /\[molecule\-/ && $CI_COMMIT_MESSAGE !~ /\[molecule\-kubernetes]/
     when: never
 
 molecule_kubernetes_create:
@@ -809,7 +810,7 @@ molecule_kubernetes_create:
 molecule_kubernetes_test:
   <<: *molecule
   <<: *molecule_test
-  resource_group: eks_test_cluster
+  resource_group: $MOLECULE_K8S_CLUSTER
   rules:
     - *kubernetes_ignore_rule
     - *cluster_agent
@@ -1019,7 +1020,7 @@ molecule_secrets_success_cleanup:
   # Currently we default to only running on Python2 build.
   # TODO: Change this when V3 releases are finalized and the default.
   - &swarm_ignore_rule
-    if: $MAJOR_VERSION == "2" && $CI_COMMIT_MESSAGE =~ /\[molecule\-/ && $CI_COMMIT_MESSAGE !~ /\[molecule\-swarm]/
+    if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_COMMIT_MESSAGE =~ /\[molecule\-/ && $CI_COMMIT_MESSAGE !~ /\[molecule\-swarm]/
     when: never
 
 molecule_swarm_create:
@@ -1078,7 +1079,7 @@ molecule_swarm_success_cleanup:
 
 .molecule_vms_rule:
   - &vms_ignore_rule
-    if: $CI_COMMIT_MESSAGE =~ /\[molecule\-/ && $CI_COMMIT_MESSAGE !~ /\[molecule\-vms]/
+    if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_COMMIT_MESSAGE =~ /\[molecule\-/ && $CI_COMMIT_MESSAGE !~ /\[molecule\-vms]/
     when: never
 
 molecule_vms_create:
@@ -1086,7 +1087,8 @@ molecule_vms_create:
   <<: *molecule_create
   rules:
     - *vms_ignore_rule
-    - when: always
+    - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION
+      when: always
   variables:
     MOLECULE_SCENARIO: vms
 
@@ -1095,7 +1097,8 @@ molecule_vms_test:
   <<: *molecule_test
   rules:
     - *vms_ignore_rule
-    - when: on_success
+    - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION
+      when: on_success
   variables:
     MOLECULE_SCENARIO: vms
   dependencies:
@@ -1113,7 +1116,8 @@ molecule_vms_failure_cleanup:
   <<: *molecule_destroy
   rules:
     - *vms_ignore_rule
-    - when: on_failure
+    - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION
+      when: on_failure
   needs:
     - molecule_vms_create
     - molecule_vms_test
@@ -1125,7 +1129,8 @@ molecule_vms_success_cleanup:
   <<: *molecule_destroy
   rules:
     - *vms_ignore_rule
-    - when: on_success
+    - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION
+      when: on_success
   dependencies:
     - molecule_vms_create
     - molecule_vms_test
